src/test/ui/issues/issue-22789.stderr
error: compilation successful
  --> $DIR/issue-22789.rs:14:1
   |
LL | / fn main() { //~ ERROR compilation successful
LL | |     let k = |x: i32| { x + 1 };
LL | |     Fn::call(&k, (0,));
LL | | }
   | |_^

error: aborting due to previous error

